--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
     "test": "jest"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.2",
-    "@babel/node": "^7.6.2",
     "@babel/cli": "^7.8.4",
-    "@babel/preset-env": "^7.9.5"
+    "@babel/core": "^7.26.8",
+    "@babel/node": "^7.6.2",
+    "@babel/preset-env": "^7.26.8",
+    "babel-jest": "^29.7.0"
   },
   "dependencies": {
-    "jest": "^25.4.0",
+    "axios": "^1.7.9",
+    "jest": "^29.7.0",
     "node-localstorage": "^2.1.6"
   }
 }
