--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
+  "type": "module",
   "name": "the-cresim",
   "scripts": {
     "start": "babel-node index.js",
     "test": "jest"
   },
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
     "@babel/core": "^7.6.2",
     "@babel/node": "^7.6.2",
-    "@babel/cli": "^7.8.4",
     "@babel/preset-env": "^7.9.5"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "jest": "^25.4.0",
     "node-localstorage": "^2.1.6"
   }
